--- a/styles/float.css
+++ b/styles/float.css
@@ -52,10 +52,14 @@
     background-color: var(--hover);
     font-size: 200%;
     float: left;
+    max-width: 100%;
+    min-width: 40%;
 }
 
 #hexadecimal {
     background-color: var(--hover);
     font-size: 200%;
     float: right;
+    max-width: 38%;
+    min-width: fit-content;
 }
